--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
-      <h1>About Me</h1>
+      <h1>À propos de nous</h1>
       <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Nous sommes un club d'échecs principalement universitaire mais pas que! Tout étudiant, alumni ou membre du corps enseignant de la ville de Fribourg est le bienvenu</p>
+        <p>Pour adhérer au club vous pouvez sans autres venir tester gratuitement deux fois nos activités. Si cela vous plait nous demandons une petite cotisation symbolique de 5.- par semestre.</p>
       </div>
     </div>
   </div>
