--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <h1>My Logo</h1>
     </div>
     <div class="w3-padding-64">
-      <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Accueil</a>
+      <a href="#aboutus" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Accueil</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Nos activités</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Lieu</a>
+      <a href="#lieu" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Lieu</a>
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+  <div class="w3-half w3-blue-grey w3-container" style="height:700px" id="aboutus">
     <div class="w3-padding-64 w3-center">
       <h1>À propos de nous</h1>
       <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
@@ -65,7 +65,7 @@
     </div><br>
     <p>Just call me awesome.</p>
   </div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:800px">
+  <div class="w3-half w3-indigo w3-container" style="min-height:800px" id="lieu">
     <div class="w3-padding-64 w3-center">
       <h2>Resume</h2>
       <p>A draft from my CV</p>
