--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </div>
 
 <!-- Third Grid: Swing By & Contact -->
-<div class="w3-row" id="contact">
+<div class="w3-row" >
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <h1>Swing By</h1>
@@ -125,7 +125,7 @@
       <p>test@test.com</p>
     </div>
   </div>
-  <div class="w3-half w3-teal w3-container" style="height:700px">
+  <div class="w3-half w3-teal w3-container" style="height:700px" id="contact">
     <div class="w3-padding-64 w3-padding-large">
       <h1>Contact</h1>
       <p class="w3-opacity">GET IN TOUCH</p>
